--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,8 @@ bing_verify:
 links:
   # - title: Blog
   #   url: /posts/
-  # - title: Projects
-  #   url: /projects/
+  - title: Projects
+    url: /projects/
   # - title: Publications
   #   url: /publications/
   - title: About
