--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title:            Renaud Gervais
 description:      Describe your website.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              
-# url:              http://renaudgervais.github.io
+# url:              
+url:              http://renaudgervais.github.io
 disqus_shortname:
 
 # Owner/author information
