--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # Site navigation links
 
+- title: Home
+  url: /
+
+- title: Projects
+  url: /projects/
+
+- title: Publications
+  url: /publications/
+
 - title: About
   url: /about/
-
-- title: Sample Posts
-  url: /posts/
-
-- title: Theme Setup
-  url: /theme-setup/
-
-- title: Made Mistakes
-  url: http://mademistakes.com
