Changing bio photo

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ kramdown:
 # Site owner
 owner:
   name: Renaud Gervais
-  avatar: bio-photo.jpg
+  avatar: bio-photo-2.jpg
   bio: "Researcher, designer, programmer. I like tinkering with ideas that lie at the boundaries of different fields."
   email: renaud.gervais@gmail.com
   disqus-shortname:
