--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 title:            Renaud Gervais
 locale:           en_US
-url:
-# url:              http://renaudgervais.github.io
+# url:
+url:              http://renaudgervais.github.io
 
 
 # Jekyll configuration
